update html examples

--- a/html-auth/package.json
+++ b/html-auth/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "html-example",
+  "name": "html-auth",
   "private": true,
-  "version": "2.2.1",
+  "version": "2.4.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@wagmi/core": "1.0.1",
-    "@web3modal/ethereum": "2.4.0",
-    "@web3modal/html": "2.4.0",
-    "viem": "0.3.19"
+    "@web3modal/auth-html": "2.4.0"
   },
   "devDependencies": {
     "vite": "4.3.5"
