Update dependencies, add html-ethereum-provider example

--- a/html-auth/package.json
+++ b/html-auth/package.json
@@ -4,13 +4,12 @@
   "version": "2.4.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "preview": "vite preview"
+    "dev": "vite"
   },
   "dependencies": {
     "@web3modal/auth-html": "2.4.1"
   },
   "devDependencies": {
-    "vite": "4.3.5"
+    "vite": "4.3.6"
   }
 }
