--- a/html-ethereum-provider/package.json
+++ b/html-ethereum-provider/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html-wagmi",
+  "name": "html-ethereum-provider",
   "private": true,
   "version": "2.4.1",
   "type": "module",
@@ -7,10 +7,8 @@
     "dev": "vite"
   },
   "dependencies": {
-    "@wagmi/core": "1.0.5",
-    "@web3modal/ethereum": "2.4.1",
-    "@web3modal/html": "2.4.1",
-    "viem": "0.3.26"
+    "@web3modal/standalone": "2.4.1",
+    "@walletconnect/ethereum-provider": "2.7.4"
   },
   "devDependencies": {
     "vite": "4.3.6"
