update html sign example

--- a/html-sign/package.json
+++ b/html-sign/package.json
@@ -7,8 +7,7 @@
     "dev": "vite"
   },
   "dependencies": {
-    "@walletconnect/sign-client": "2.7.4",
-    "@web3modal/standalone": "2.4.1"
+    "@web3modal/sign-html": "2.4.2-169b1cbb"
   },
   "devDependencies": {
     "vite": "4.3.6"
