--- a/nextjs-sign/package.json
+++ b/nextjs-sign/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev"
   },
   "dependencies": {
-    "@walletconnect/sign-client": "2.7.4",
-    "@web3modal/standalone": "2.4.1",
+    "@web3modal/sign-react": "2.4.2-169b1cbb",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
