--- a/html-sign/package.json
+++ b/html-sign/package.json
@@ -1,15 +1,15 @@
 {
   "name": "html-sign",
   "private": true,
-  "version": "2.4.1",
+  "version": "2.4.2",
   "type": "module",
   "scripts": {
     "dev": "vite"
   },
   "dependencies": {
-    "@web3modal/sign-html": "2.4.2-169b1cbb"
+    "@web3modal/sign-html": "2.4.2"
   },
   "devDependencies": {
-    "vite": "4.3.6"
+    "vite": "4.3.9"
   }
 }
