--- a/nextjs-sign/package.json
+++ b/nextjs-sign/package.json
@@ -1,13 +1,13 @@
 {
   "name": "nextjs-sign",
-  "version": "2.4.1",
+  "version": "2.4.2",
   "private": true,
   "scripts": {
     "dev": "next dev"
   },
   "dependencies": {
-    "@web3modal/sign-react": "2.4.2-169b1cbb",
-    "next": "13.4.2",
+    "@web3modal/sign-react": "2.4.2",
+    "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
