--- a/html-ethereum-provider/package.json
+++ b/html-ethereum-provider/package.json
@@ -1,14 +1,14 @@
 {
   "name": "html-ethereum-provider",
   "private": true,
-  "version": "2.4.3",
+  "version": "2.4.5",
   "type": "module",
   "scripts": {
     "dev": "vite"
   },
   "dependencies": {
-    "@web3modal/standalone": "2.4.3",
-    "@walletconnect/ethereum-provider": "2.7.8"
+    "@walletconnect/modal": "2.4.5",
+    "@walletconnect/ethereum-provider": "2.8.0"
   },
   "devDependencies": {
     "vite": "4.3.9"
