--- a/walletconnect-modal-auth-html/package.json
+++ b/walletconnect-modal-auth-html/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html-auth",
+  "name": "walletconnect-modal-auth-html",
   "private": true,
   "version": "2.4.7",
   "type": "module",
