--- a/walletconnect-modal-ethereum-provider-html/package.json
+++ b/walletconnect-modal-ethereum-provider-html/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html-wagmi",
+  "name": "walletconnect-modal-auth-react",
   "private": true,
   "version": "2.4.7",
   "type": "module",
@@ -7,10 +7,8 @@
     "dev": "vite"
   },
   "dependencies": {
-    "@wagmi/core": "1.2.0",
-    "@web3modal/ethereum": "2.4.7",
-    "@web3modal/html": "2.4.7",
-    "viem": "1.0.7"
+    "@walletconnect/modal": "2.4.7",
+    "@walletconnect/ethereum-provider": "2.8.1"
   },
   "devDependencies": {
     "vite": "4.3.9"
