--- a/walletconnect-modal-sign-html/package.json
+++ b/walletconnect-modal-sign-html/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html-ethereum-provider",
+  "name": "walletconnect-modal-sign-html",
   "private": true,
   "version": "2.4.7",
   "type": "module",
@@ -7,8 +7,7 @@
     "dev": "vite"
   },
   "dependencies": {
-    "@walletconnect/modal": "2.4.7",
-    "@walletconnect/ethereum-provider": "2.8.1"
+    "@web3modal/sign-html": "2.4.7"
   },
   "devDependencies": {
     "vite": "4.3.9"
