--- a/walletconnect-modal-ethereum-provider-react/package.json
+++ b/walletconnect-modal-ethereum-provider-react/package.json
@@ -1,13 +1,13 @@
 {
   "name": "walletconnect-modal-ethereum-provider-react",
-  "version": "2.4.7",
+  "version": "2.5.0-0d56da4",
   "private": true,
   "scripts": {
     "dev": "next dev"
   },
   "dependencies": {
     "@walletconnect/ethereum-provider": "2.8.1",
-    "@walletconnect/modal": "2.4.7",
+    "@walletconnect/modal": "2.5.0-0d56da4",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
