--- a/walletconnect-modal-sign-html/package.json
+++ b/walletconnect-modal-sign-html/package.json
@@ -1,13 +1,13 @@
 {
   "name": "walletconnect-modal-sign-html",
   "private": true,
-  "version": "2.4.7",
+  "version": "2.5.0-0d56da4",
   "type": "module",
   "scripts": {
     "dev": "vite"
   },
   "dependencies": {
-    "@web3modal/sign-html": "2.4.7"
+    "@walletconnect/modal-sign-html": "2.5.0-0d56da4"
   },
   "devDependencies": {
     "vite": "4.3.9"
