--- a/walletconnect-modal-sign-react/package.json
+++ b/walletconnect-modal-sign-react/package.json
@@ -1,12 +1,12 @@
 {
   "name": "walletconnect-modal-sign-react",
-  "version": "2.4.7",
+  "version": "2.5.0-0d56da4",
   "private": true,
   "scripts": {
     "dev": "next dev"
   },
   "dependencies": {
-    "@web3modal/sign-react": "2.4.7",
+    "@walletconnect/modal-sign-react": "2.5.0-0d56da4",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
