--- a/walletconnect-modal-sign-html/package.json
+++ b/walletconnect-modal-sign-html/package.json
@@ -1,13 +1,13 @@
 {
   "name": "walletconnect-modal-sign-html",
   "private": true,
-  "version": "2.5.0-f0d3ee1",
+  "version": "2.5.0",
   "type": "module",
   "scripts": {
     "dev": "vite"
   },
   "dependencies": {
-    "@walletconnect/modal-sign-html": "2.5.0-f0d3ee1"
+    "@walletconnect/modal-sign-html": "2.5.0"
   },
   "devDependencies": {
     "vite": "4.3.9"
