--- a/walletconnect-modal-sign-react/package.json
+++ b/walletconnect-modal-sign-react/package.json
@@ -1,12 +1,12 @@
 {
   "name": "walletconnect-modal-sign-react",
-  "version": "2.5.0-f0d3ee1",
+  "version": "2.5.0",
   "private": true,
   "scripts": {
     "dev": "next dev"
   },
   "dependencies": {
-    "@walletconnect/modal-sign-react": "2.5.0-f0d3ee1",
+    "@walletconnect/modal-sign-react": "2.5.0",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
