--- a/web3modal-wagmi-react/package.json
+++ b/web3modal-wagmi-react/package.json
@@ -11,7 +11,7 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "viem": "^1.5.0",
-    "wagmi": "^1.3.9"
+    "viem": "1.5.0",
+    "wagmi": "1.3.9"
   }
 }
