--- a/web3modal-wagmi-html/package.json
+++ b/web3modal-wagmi-html/package.json
@@ -1,15 +1,14 @@
 {
   "name": "web3modal-wagmi-html",
   "private": true,
-  "version": "2.7.1",
+  "version": "3.0.0-91ecf92a",
   "type": "module",
   "scripts": {
     "dev": "vite"
   },
   "dependencies": {
     "@wagmi/core": "1.3.3",
-    "@web3modal/ethereum": "2.7.1",
-    "@web3modal/html": "2.7.1",
+    "@web3modal/wagmi": "3.0.0-91ecf92a",
     "viem": "1.2.5"
   },
   "devDependencies": {
